changed checkbox ids to be more descriptive

--- a/pkmn_bdsp.html
+++ b/pkmn_bdsp.html
@@ -54,8 +54,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck86" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck86">86</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck86" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck86">86</label>
                   </div>
                 </td>
                 <td>Tower Master Ribbon</td>
@@ -64,8 +64,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck87" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck87">88</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck88" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck88">88</label>
                   </div>
                 </td>
                 <td>Twinkling Star Ribbon</td>
@@ -90,8 +90,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck47" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck47">47</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck47" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck47">47</label>
                   </div>
                 </td>
                 <td>Sinnoh Champ Ribbon</td>
@@ -100,8 +100,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck60" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck60">60</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck60" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck60">60</label>
                   </div>
                 </td>
                 <td>Coolness Master Ribbon</td>
@@ -110,8 +110,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck61" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck61">61</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck61" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck61">61</label>
                   </div>
                 </td>
                 <td>Beauty Master Ribbon</td>
@@ -120,8 +120,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck62" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck62">62</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck62" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck62">62</label>
                   </div>
                 </td>
                 <td>Cuteness Master Ribbon</td>
@@ -130,8 +130,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck63" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck63">63</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck63" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck63">63</label>
                   </div>
                 </td>
                 <td>Cleverness Master Ribbon</td>
@@ -140,8 +140,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck64" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck64">64</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck64" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck64">64</label>
                   </div>
                 </td>
                 <td>Toughness Ribbon</td>
@@ -150,8 +150,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck65" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck65">65</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck65" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck65">65</label>
                   </div>
                 </td>
                 <td>Contest Star Ribbon</td>
@@ -160,8 +160,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck72">72</label>
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
@@ -170,8 +170,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck73" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck73">73</label>
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
@@ -180,8 +180,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck74" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck74">74</label>
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
@@ -190,8 +190,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck75" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck75">75</label>
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
@@ -200,8 +200,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck76" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck76">76</label>
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
@@ -210,8 +210,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck77" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck77">77</label>
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
@@ -220,8 +220,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck78" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck78">78</label>
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
@@ -230,8 +230,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck79" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck79">79</label>
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
@@ -240,8 +240,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck80" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck80">80</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck80" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck80">80</label>
                   </div>
                 </td>
                 <td>Gorgeous Ribbon</td>
@@ -250,8 +250,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck81" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck81">81</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck81" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck81">81</label>
                   </div>
                 </td>
                 <td>Royal Ribbon</td>
@@ -260,8 +260,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck82" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck82">82</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck82" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck82">82</label>
                   </div>
                 </td>
                 <td>Gorgeous Royal Ribbon</td>
@@ -270,8 +270,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck83" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck83">83</label>
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
@@ -280,8 +280,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck84">84</label>
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
