--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -51,8 +51,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck48" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck48">48</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck48" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck48">48</label>
                   </div>
                 </td>
                 <td>Ability Ribbon</td>
@@ -63,8 +63,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck49" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck49">49</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck49" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck49">49</label>
                   </div>
                 </td>
                 <td>Great Ability Ribbon</td>
@@ -75,8 +75,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck50" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck50">50</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck50" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck50">50</label>
                   </div>
                 </td>
                 <td>Double Ability Ribbon</td>
@@ -87,8 +87,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck51" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck51">51</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck51" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck51">51</label>
                   </div>
                 </td>
                 <td>Multi Ability Ribbon</td>
@@ -99,8 +99,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck52" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck52">52</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck52" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck52">52</label>
                   </div>
                 </td>
                 <td>Pair Ability Ribbon</td>
@@ -111,8 +111,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck53" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck53">53</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck53" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck53">53</label>
                   </div>
                 </td>
                 <td>World Ability Ribbon</td>
@@ -123,8 +123,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck54" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck54">54</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck54" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck54">54</label>
                   </div>
                 </td>
                 <td>Legend Ribbon</td>
@@ -147,8 +147,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck000" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck000"></label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck000" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck000"></label>
                   </div>
                 </td>
                 <td>Shiny Crown</td>
@@ -171,8 +171,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck72">72</label>
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
@@ -183,8 +183,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck73" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck73">73</label>
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
@@ -195,8 +195,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck74" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck74">74</label>
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
@@ -207,8 +207,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck75" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck75">75</label>
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
@@ -219,8 +219,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck76" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck76">76</label>
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
@@ -231,8 +231,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck77" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck77">77</label>
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
@@ -243,8 +243,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck78" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck78">78</label>
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
@@ -255,8 +255,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck79" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck79">79</label>
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
