--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -51,8 +51,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck56" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck56">56</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck56" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck56">56</label>
                   </div>
                 </td>
                 <td>Training Ribbon</td>
@@ -62,8 +62,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck57" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck57">57</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck57" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck57">57</label>
                   </div>
                 </td>
                 <td>Skillful Battler Ribbon</td>
@@ -73,8 +73,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck58" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck58">58</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck58" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck58">58</label>
                   </div>
                 </td>
                 <td>Expert Battler Ribbon</td>
@@ -85,8 +85,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck59" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck59">59</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck59" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck59">59</label>
                   </div>
                 </td>
                 <td>Hoenn Champion Ribbon</td>
@@ -95,8 +95,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck60" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck60">60</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck60" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck60">60</label>
                   </div>
                 </td>
                 <td>Coolness Master Ribbon</td>
@@ -105,8 +105,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck61" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck61">61</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck61" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck61">61</label>
                   </div>
                 </td>
                 <td>Beauty Master Ribbon</td>
@@ -115,8 +115,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck62" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck62">62</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck62" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck62">62</label>
                   </div>
                 </td>
                 <td>Cuteness Master Ribbon</td>
@@ -125,8 +125,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck63" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck63">63</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck63" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck63">63</label>
                   </div>
                 </td>
                 <td>Cleverness Master Ribbon</td>
@@ -135,8 +135,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck64" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck64">64</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck64" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck64">64</label>
                   </div>
                 </td>
                 <td>Toughness Ribbon</td>
@@ -145,8 +145,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck65" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck65">65</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck65" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck65">65</label>
                   </div>
                 </td>
                 <td>Contest Star Ribbon</td>
@@ -169,8 +169,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck72">72</label>
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
@@ -181,8 +181,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck73" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck73">73</label>
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
@@ -193,8 +193,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck74" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck74">74</label>
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
@@ -205,8 +205,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck75" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck75">75</label>
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
@@ -217,8 +217,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck76" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck76">76</label>
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
@@ -229,8 +229,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck77" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck77">77</label>
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
@@ -241,8 +241,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck78" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck78">78</label>
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
@@ -253,8 +253,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck79" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck79">79</label>
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
@@ -265,8 +265,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck80" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck80">80</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck80" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck80">80</label>
                   </div>
                 </td>
                 <td>Gorgeous Ribbon</td>
@@ -277,8 +277,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck81" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck81">81</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck81" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck81">81</label>
                   </div>
                 </td>
                 <td>Royal Ribbon</td>
@@ -289,8 +289,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck82" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck82">82</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck82" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck82">82</label>
                   </div>
                 </td>
                 <td>Gorgeous Royal Ribbon</td>
@@ -301,8 +301,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck83" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck83">83</label>
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
@@ -313,8 +313,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck84">84</label>
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
