--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -51,8 +51,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck3" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck3">3</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck3" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck3">3</label>
                   </div>
                 </td>
                 <td>Champion Ribbon</td>
@@ -61,8 +61,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck4" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck4">4</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck4" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck4">4</label>
                   </div>
                 </td>
                 <td>Cool Ribbon</td>
@@ -71,8 +71,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck5" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck5">5</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck5" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck5">5</label>
                   </div>
                 </td>
                 <td>Cool Super Ribbon</td>
@@ -81,8 +81,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck6" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck6">6</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck6" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck6">6</label>
                   </div>
                 </td>
                 <td>Cool Hyper Ribbon</td>
@@ -91,8 +91,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck7" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck7">7</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck7" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck7">7</label>
                   </div>
                 </td>
                 <td>Cool Master Ribbon</td>
@@ -101,8 +101,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck8" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck8">8</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck8" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck8">8</label>
                   </div>
                 </td>
                 <td>Beauty Ribbon</td>
@@ -111,8 +111,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck9" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck9">9</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck9" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck9">9</label>
                   </div>
                 </td>
                 <td>Beauty Super Ribbon</td>
@@ -121,8 +121,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck10" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck10">10</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck10" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck10">10</label>
                   </div>
                 </td>
                 <td>Beauty Hyper Ribbon</td>
@@ -131,8 +131,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck11" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck11">11</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck11" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck11">11</label>
                   </div>
                 </td>
                 <td>Beauty Master Ribbon</td>
@@ -141,8 +141,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck12" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck12">12</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck12" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck12">12</label>
                   </div>
                 </td>
                 <td>Cute Ribbon</td>
@@ -151,8 +151,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck13" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck13">13</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck13" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck13">13</label>
                   </div>
                 </td>
                 <td>Cute Super Ribbon</td>
@@ -161,8 +161,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck14" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck14">14</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck14" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck14">14</label>
                   </div>
                 </td>
                 <td>Cute Hyper Ribbon</td>
@@ -171,8 +171,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck15" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck15">15</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck15" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck15">15</label>
                   </div>
                 </td>
                 <td>Cute Master Ribbon</td>
@@ -181,8 +181,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck16" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck16">16</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck16" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck16">16</label>
                   </div>
                 </td>
                 <td>Smart Ribbon</td>
@@ -191,8 +191,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck17" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck17">17</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck17" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck17">17</label>
                   </div>
                 </td>
                 <td>Smart Super Ribbon</td>
@@ -201,8 +201,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck18" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck18">18</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck18" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck18">18</label>
                   </div>
                 </td>
                 <td>Smart Hyper Ribbon</td>
@@ -211,8 +211,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck19" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck19">19</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck19" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck19">19</label>
                   </div>
                 </td>
                 <td>Smart Master Ribbon</td>
@@ -221,8 +221,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck20" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck201">20</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck20" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck201">20</label>
                   </div>
                 </td>
                 <td>Tough Ribbon</td>
@@ -231,8 +231,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck21" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck21">21</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck21" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck21">21</label>
                   </div>
                 </td>
                 <td>Tough Super Ribbon</td>
@@ -241,8 +241,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck22" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck22">22</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck22" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck22">22</label>
                   </div>
                 </td>
                 <td>Tough Hyper Ribbon</td>
@@ -251,8 +251,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck23" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck23">23</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck23" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck23">23</label>
                   </div>
                 </td>
                 <td>Tough Master Ribbon</td>
@@ -261,8 +261,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck24" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck24">24</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck24" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck24">24</label>
                   </div>
                 </td>
                 <td>Artist Ribbon</td>
@@ -271,8 +271,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck25" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck25">25</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck25" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck25">25</label>
                   </div>
                 </td>
                 <td>Winning Ribbon</td>
@@ -281,8 +281,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck26" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck26">26</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck26" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck26">26</label>
                   </div>
                 </td>
                 <td>Victory Ribbon</td>
@@ -305,8 +305,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck72">72</label>
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
