--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -51,8 +51,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck66" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck66">66</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck66" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck66">66</label>
                   </div>
                 </td>
                 <td>Alola Champion Ribbon</td>
@@ -61,8 +61,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck67" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck67">67</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck67" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck67">67</label>
                   </div>
                 </td>
                 <td>Battle Royal Master Ribbon</td>
@@ -71,8 +71,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck68" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck68">68</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck68" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck68">68</label>
                   </div>
                 </td>
                 <td>Battle Tree Great Ribbon</td>
@@ -81,8 +81,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck69" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck69">69</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck69" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck69">69</label>
                   </div>
                 </td>
                 <td>Battle Tree Master Ribbon</td>
@@ -105,8 +105,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck72">72</label>
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
@@ -117,8 +117,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck83" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck83">83</label>
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
@@ -129,8 +129,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck84">84</label>
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
