--- a/pkmn_xd_colosseum.html
+++ b/pkmn_xd_colosseum.html
@@ -52,8 +52,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck1" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck1">1</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck1" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck1">1</label>
                   </div>
                 </td>
                 <td>National Ribbon</td>
@@ -62,8 +62,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck2" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck2">2</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck2" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck2">2</label>
                   </div>
                 </td>
                 <td>Earth Ribbon</td>
