--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -51,8 +51,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck55" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck55">55</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck55" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck55">55</label>
                   </div>
                 </td>
                 <td>Kalos Champion Ribbon</td>
@@ -61,8 +61,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck56" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck56">56</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck56" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck56">56</label>
                   </div>
                 </td>
                 <td>Training Ribbon</td>
@@ -72,8 +72,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck57" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck57">57</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck57" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck57">57</label>
                   </div>
                 </td>
                 <td>Skillful Battler Ribbon</td>
@@ -83,8 +83,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck58" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck58">58</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck58" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck58">58</label>
                   </div>
                 </td>
                 <td>Expert Battler Ribbon</td>
@@ -109,8 +109,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck70" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck70">70</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck70" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck70">70</label>
                   </div>
                 </td>
                 <td>Contest Memory Ribbon</td>
@@ -121,8 +121,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck71" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck71">71</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck71" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck71">71</label>
                   </div>
                 </td>
                 <td>Battle Memory Ribbon</td>
@@ -133,8 +133,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck72">72</label>
                   </div>
                 </td>
                 <td>Effort Ribbon</td>
@@ -145,8 +145,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck73" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck73">73</label>
                   </div>
                 </td>
                 <td>Alert Ribbon</td>
@@ -157,8 +157,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck74" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck74">74</label>
                   </div>
                 </td>
                 <td>Shock Ribbon</td>
@@ -169,8 +169,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck75" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck75">75</label>
                   </div>
                 </td>
                 <td>Downcast Ribbon</td>
@@ -181,8 +181,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck76" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck76">76</label>
                   </div>
                 </td>
                 <td>Careless Ribbon</td>
@@ -193,8 +193,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck77" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck77">77</label>
                   </div>
                 </td>
                 <td>Relax Ribbon</td>
@@ -205,8 +205,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck78" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck78">78</label>
                   </div>
                 </td>
                 <td>Snooze Ribbon</td>
@@ -217,8 +217,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck79" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck79">79</label>
                   </div>
                 </td>
                 <td>Smile Ribbon</td>
@@ -229,8 +229,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck83" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck83">83</label>
                   </div>
                 </td>
                 <td>Footprint Ribbon</td>
@@ -241,8 +241,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck84">84</label>
                   </div>
                 </td>
                 <td>Best Friends Ribbon</td>
